[gd_scene load_steps=49 format=3 uid="uid://ddg4kudnlrapu"]

[ext_resource type="Script" uid="uid://f6n60ra2kqey" path="res://scripts/character_body_2d.gd" id="1_1jxqw"]
[ext_resource type="PackedScene" uid="uid://bua427cfi5xqo" path="res://scenes/dummy_1.tscn" id="2_d2wvv"]
[ext_resource type="Texture2D" uid="uid://dv78yk7ufsq4f" path="res://player/wizard idle.png" id="2_dw050"]
[ext_resource type="Texture2D" uid="uid://ln1epm3ur3vt" path="res://player/wizard walk real.png" id="3_b26j0"]
[ext_resource type="Texture2D" uid="uid://bh74872swm64w" path="res://player/hat1.png" id="4_n7ghd"]
[ext_resource type="Texture2D" uid="uid://cvpii3hhgjkv6" path="res://player/hat2.png" id="5_nvl01"]
[ext_resource type="Texture2D" uid="uid://cakaka1orkg5m" path="res://player/hands/hand holding cards.png" id="6_ivps1"]
[ext_resource type="Texture2D" uid="uid://cxdvnclro3jmr" path="res://player/hands/hand holding hat3.png" id="7_fulsm"]
[ext_resource type="Texture2D" uid="uid://bq4ngyjrav1ox" path="res://player/hands/throwing hand.png" id="7_urp6f"]
[ext_resource type="Texture2D" uid="uid://c2tup7tdagic" path="res://player/hands/holding bunny.png" id="8_4r5pv"]
[ext_resource type="Script" uid="uid://d18hknpn023v5" path="res://scripts/hand.gd" id="8_smehm"]
[ext_resource type="AudioStream" uid="uid://b7r17ppq848sb" path="res://player/hands/wooshcut.mp3" id="9_ur7pv"]
[ext_resource type="PackedScene" uid="uid://bp8bell1ia18o" path="res://scenes/card.tscn" id="9_y4r1p"]
[ext_resource type="Texture2D" uid="uid://d1v62tqhklod5" path="res://player/hands/throwing bunny1.png" id="11_60mlk"]
[ext_resource type="Texture2D" uid="uid://c3p4kbrfbjmln" path="res://player/hands/throwing bunny 2.png" id="12_i4ail"]
[ext_resource type="AudioStream" uid="uid://cl76onm677fcy" path="res://effects/pain1.mp3" id="12_jej6c"]
[ext_resource type="AudioStream" uid="uid://cfeeeq47oq8b" path="res://effects/pain2.mp3" id="13_f1ej7"]
[ext_resource type="PackedScene" uid="uid://bsajcfu7adorr" path="res://scenes/bunny.tscn" id="15_a38lo"]
[ext_resource type="AudioStream" uid="uid://fku7gr3oak6p" path="res://effects/Team Fortress 2 SFX - Server JoinEquip Weapon.mp3" id="16_a38lo"]
[ext_resource type="Script" uid="uid://d3rcfmf1au7wp" path="res://scripts/camera_2d.gd" id="17_4r5pv"]
[ext_resource type="AudioStream" uid="uid://bs16o7jswwdxp" path="res://effects/Smoke Clone Naruto Sound Effect.mp3" id="20_60mlk"]
[ext_resource type="AudioStream" uid="uid://bla654vw054vr" path="res://effects/Half Life Medkit Sound Effect.mp3" id="22_4ni07"]
[ext_resource type="AudioStream" uid="uid://j4ed74rgytpj" path="res://effects/Item Pick up (Counter Strike Source) - Sound Effect for editing.mp3" id="23_4ni07"]
[ext_resource type="Texture2D" uid="uid://bw54inxrmvqco" path="res://effects/explosionfunnyspritesheet.png" id="24_ujl30"]
[ext_resource type="Texture2D" uid="uid://cc2c2ko7v3uos" path="res://effects/empty png.png" id="25_31cv2"]
[ext_resource type="AudioStream" uid="uid://0gbjcjooi426" path="res://effects/explosionwav.mp3" id="26_pf23h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bwjto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dw050")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_b26j0")
}, {
"duration": 1.0,
"texture": ExtResource("2_dw050")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d2wvv"]
height = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_606se"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_n7ghd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_nvl01")
}, {
"duration": 1.0,
"texture": ExtResource("4_n7ghd")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_u1c27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fulsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_4r5pv")
}],
"loop": false,
"name": &"bunnyequip",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_urp6f")
}, {
"duration": 0.01,
"texture": ExtResource("6_ivps1")
}],
"loop": false,
"name": &"fire",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ivps1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_4r5pv")
}],
"loop": true,
"name": &"idlebunny_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fulsm")
}],
"loop": true,
"name": &"nobunnies",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_60mlk")
}, {
"duration": 6.0,
"texture": ExtResource("12_i4ail")
}, {
"duration": 1.0,
"texture": ExtResource("8_4r5pv")
}],
"loop": false,
"name": &"throwingbunny",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0lrg8"]
atlas = ExtResource("24_ujl30")
region = Rect2(660, 314, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj2md"]
atlas = ExtResource("24_ujl30")
region = Rect2(880, 314, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssgrl"]
atlas = ExtResource("24_ujl30")
region = Rect2(0, 628, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3oov"]
atlas = ExtResource("24_ujl30")
region = Rect2(220, 628, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps36d"]
atlas = ExtResource("24_ujl30")
region = Rect2(440, 628, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3p06"]
atlas = ExtResource("24_ujl30")
region = Rect2(660, 628, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_qswec"]
atlas = ExtResource("24_ujl30")
region = Rect2(880, 628, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_6im72"]
atlas = ExtResource("24_ujl30")
region = Rect2(0, 942, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij4sd"]
atlas = ExtResource("24_ujl30")
region = Rect2(220, 942, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_2utr5"]
atlas = ExtResource("24_ujl30")
region = Rect2(0, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeu1c"]
atlas = ExtResource("24_ujl30")
region = Rect2(220, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_32nge"]
atlas = ExtResource("24_ujl30")
region = Rect2(440, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kaeb"]
atlas = ExtResource("24_ujl30")
region = Rect2(660, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cq7y"]
atlas = ExtResource("24_ujl30")
region = Rect2(880, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwgvd"]
atlas = ExtResource("24_ujl30")
region = Rect2(0, 314, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtxxd"]
atlas = ExtResource("24_ujl30")
region = Rect2(220, 314, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfc16"]
atlas = ExtResource("24_ujl30")
region = Rect2(440, 314, 220, 314)

[sub_resource type="SpriteFrames" id="SpriteFrames_dt7fs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lrg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj2md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssgrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3oov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps36d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3p06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qswec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6im72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij4sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2utr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeu1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32nge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kaeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cq7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwgvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtxxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfc16")
}, {
"duration": 1.0,
"texture": ExtResource("25_31cv2")
}],
"loop": false,
"name": &"default",
"speed": 25.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 128
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_1jxqw")
Dummy = ExtResource("2_d2wvv")

[node name="Body" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_bwjto")
animation = &"walk"
frame_progress = 0.216896

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
shape = SubResource("CapsuleShape2D_d2wvv")

[node name="Hat" type="AnimatedSprite2D" parent="."]
z_index = 2
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_606se")
animation = &"idle"

[node name="Hand" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(2.71051e-20, 10)
scale = Vector2(0.12518, 0.114083)
sprite_frames = SubResource("SpriteFrames_u1c27")
animation = &"nobunnies"
flip_h = true
script = ExtResource("8_smehm")
Bullet = ExtResource("9_y4r1p")
Bunny = ExtResource("15_a38lo")

[node name="Equip" type="AudioStreamPlayer2D" parent="Hand"]
position = Vector2(-2.16529e-19, -87.6555)
scale = Vector2(7.9885, 8.76555)
stream = ExtResource("16_a38lo")
volume_db = -10.0

[node name="CardThrow" type="AudioStreamPlayer2D" parent="Hand"]
stream = ExtResource("9_ur7pv")
pitch_scale = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("17_4r5pv")

[node name="Sounds" type="Node2D" parent="."]

[node name="Pain1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("12_jej6c")
volume_db = -8.0

[node name="Pain2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("13_f1ej7")
volume_db = -8.0

[node name="SmokeBomb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_60mlk")
volume_db = -10.0

[node name="Medkit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_4ni07")
volume_db = -10.0

[node name="PickUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_4ni07")
volume_db = 10.0

[node name="Death" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_dt7fs")

[node name="DeathSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("26_pf23h")
volume_db = -15.0
